2008-07-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Deal with execute bit changes.

2008-07-06  John Paul Wallington  <jpw@pobox.com>

	* kermit.el (kermit-esc-char, kermit-clean-off): Doc fixes.

2008-07-05  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git-registered): Return true for removed files.
	(vc-git-print-log, vc-git-log-view-mode): Print a single log for
	all the files instead of one per file.
	(vc-git-previous-revision): Add support for project-wide previous
	revision when specified file is nil.

2008-07-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* vms-patch.el, vmsproc.el, mail/vms-pmail.el: Move to obsolete dir.

	* vc-dir.el (vc-dir-find-child-files): New function.
	(vc-dir-resync-directory-files): New function.
	(vc-dir-recompute-file-state): New function, broken out of ...
	(vc-dir-resynch-file): ... here.  Also deal with directories.
	* vc-dispatcher.el (vc-resynch-buffers-in-directory): New function.
	(vc-resynch-buffer): Use it.

	* vc-hg.el (vc-hg-registered): Do not set vc-state.

	* vc-annotate.el (vc-annotate-mode-menu): Add separator.

2008-07-05  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-display-buffer): Don't split a buffer
	if it's not part of gdb-ui, e.g, at start.

	* progmodes/gud.el (gud-gdb-get-stackframe): Allow absolute
	filenames in stack trace (text command mode).

2008-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse-drag.el (mouse-drag-throw, mouse-drag-drag): Autoload.

	* textmodes/sgml-mode.el (sgml-font-lock-syntactic-keywords):
	Use syntax-ppss on a position *before* the char we want to change.

2008-07-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-query-replace-regexp): New function.
	(vc-dir-tool-bar-map, vc-dir-menu-map): Bind it.
	(vc-dir-mode-map): Likewise.

2008-07-03  Juanma Barranquero  <lekktu@gmail.com>

	* eshell/esh-arg.el (eshell-quote-backslash): Fix typo in docstring.